tests/regression/error/hw5_error09.nex
fun f()
{
   return 1 + true;
}
   print f();
